--- a/composer.json
+++ b/composer.json
@@ -75,5 +75,8 @@
             "allow-contrib": false,
             "require": "7.2.*"
         }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.1"
     }
 }
