--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,15 @@
         "symfony/flex": "^2",
         "symfony/form": "7.2.*",
         "symfony/framework-bundle": "7.2.*",
+        "symfony/mailer": "7.2.*",
         "symfony/maker-bundle": "^1.63",
         "symfony/runtime": "7.2.*",
-        "symfony/security-bundle": "7.2.*",
+        "symfony/security-bundle": "^7.2",
         "symfony/twig-bundle": "7.2.*",
         "symfony/validator": "7.2.*",
         "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.2.*",
+        "symfonycasts/verify-email-bundle": "*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
